[gd_scene load_steps=8 format=2]

[ext_resource path="res://src/ui/game_over/game_over.gd" type="Script" id=1]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://assets/ui/fonts/KimsBitHand.ttf"

[sub_resource type="DynamicFont" id=2]
size = 128
font_data = SubResource( 1 )

[sub_resource type="DynamicFontData" id=3]
font_path = "res://assets/ui/fonts/KimsBitHand.ttf"

[sub_resource type="DynamicFont" id=4]
size = 32
font_data = SubResource( 3 )

[sub_resource type="DynamicFontData" id=5]
font_path = "res://assets/ui/fonts/KimsBitHand.ttf"

[sub_resource type="DynamicFont" id=6]
size = 32
font_data = SubResource( 5 )

[node name="GameOver" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 0.840942
margin_right = 0.840942
mouse_filter = 2
color = Color( 0, 0, 0, 0.831373 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 100.0
margin_top = 100.0
margin_right = -100.0
margin_bottom = -100.0
mouse_filter = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 824.0
margin_bottom = 400.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="GameOverText" type="CenterContainer" parent="MarginContainer/VBoxContainer"]
margin_right = 824.0
margin_bottom = 130.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/GameOverText"]
modulate = Color( 0.741176, 0.294118, 0.32549, 1 )
margin_left = 108.0
margin_top = 1.0
margin_right = 716.0
margin_bottom = 129.0
custom_fonts/font = SubResource( 2 )
text = "Game Over"

[node name="FlavourText" type="CenterContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 134.0
margin_right = 824.0
margin_bottom = 265.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/FlavourText"]
modulate = Color( 0.290196, 0.121569, 0.129412, 0 )
margin_left = 88.0
margin_top = 32.0
margin_right = 736.0
margin_bottom = 99.0
custom_fonts/font = SubResource( 4 )
text = "You toyed with forces you could not control, 
and they have consumed you..."
align = 1

[node name="Tween" type="Tween" parent="MarginContainer/VBoxContainer/FlavourText"]

[node name="ChoiceButtons" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 269.0
margin_right = 824.0
margin_bottom = 400.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Continue" type="CenterContainer" parent="MarginContainer/VBoxContainer/ChoiceButtons"]
margin_right = 410.0
margin_bottom = 131.0
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/ChoiceButtons/Continue"]
modulate = Color( 0.741176, 0.294118, 0.32549, 1 )
margin_left = 139.0
margin_top = 49.0
margin_right = 271.0
margin_bottom = 81.0
custom_fonts/font = SubResource( 6 )
text = "Continue"
align = 1
valign = 1

[node name="Button" type="Button" parent="MarginContainer/VBoxContainer/ChoiceButtons/Continue"]
margin_left = 104.0
margin_top = 15.0
margin_right = 304.0
margin_bottom = 115.0
rect_min_size = Vector2( 200, 100 )
size_flags_horizontal = 3
size_flags_vertical = 3
shortcut_in_tooltip = false
action_mode = 0
flat = true
expand_icon = true

[node name="Quit" type="CenterContainer" parent="MarginContainer/VBoxContainer/ChoiceButtons"]
margin_left = 414.0
margin_right = 824.0
margin_bottom = 131.0
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/ChoiceButtons/Quit"]
modulate = Color( 0.741176, 0.294118, 0.32549, 1 )
margin_left = 176.0
margin_top = 49.0
margin_right = 234.0
margin_bottom = 81.0
custom_fonts/font = SubResource( 6 )
text = "Quit"
align = 1
valign = 1

[node name="Button" type="Button" parent="MarginContainer/VBoxContainer/ChoiceButtons/Quit"]
margin_left = 104.0
margin_top = 15.0
margin_right = 304.0
margin_bottom = 115.0
rect_min_size = Vector2( 200, 100 )
size_flags_horizontal = 3
size_flags_vertical = 3
shortcut_in_tooltip = false
action_mode = 0
flat = true
expand_icon = true
[connection signal="pressed" from="MarginContainer/VBoxContainer/ChoiceButtons/Continue/Button" to="." method="_on_Continue_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ChoiceButtons/Quit/Button" to="." method="_on_Quit_pressed"]
